--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
                                 class="line__inner">Us</span></h2>
                         <div class="col__content-wrap">
                             <p class="col__content-txt"><i class="bi bi-telephone-fill"></i>&nbsp;<a class="con"
-                                    style="text-decoration: none; color: black;"
+                                    style="text-decoration: none; color:dodgerblue;"
                                     href="tel:15165428400">516-542-8400</a><br><br>
-                                <i class="bi bi-geo"></i>&nbsp;1660 Front St, East Meadow,
-                                NY 11554, USA <br><br>
-                                <i class="bi bi-envelope-at"></i><a class="con" style="text-decoration: none; color: black;"
+                                <i class="bi bi-geo"></i>&nbsp;<span class="con" style="color: cadetblue;">1660 Front St, East Meadow,
+                                    NY 11554, USA</span> <br><br>
+                                <i class="bi bi-envelope-at"></i><a class="con" style="text-decoration: none; color: gray;"
                                     class=""
                                     href="mailto:FlorenciasFlorist@gmail.com">&nbsp;FlorenciasFlorist@gmail.com</a> <br>
                                 <br>
